Bug 1066410 - Serious color distortion happened when plays WebRTC. r=jesup